; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_x_tables.c_verdict_ok.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_x_tables.c_verdict_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XT_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @verdict_ok to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verdict_ok(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp sgt i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %27

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %26

11:                                               ; preds = %8
  %12 = load i32, i32* %3, align 4
  %13 = sub nsw i32 0, %12
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @XT_RETURN, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %27

19:                                               ; preds = %11
  %20 = load i32, i32* %4, align 4
  switch i32 %20, label %24 [
    i32 130, label %21
    i32 129, label %22
    i32 128, label %23
  ]

21:                                               ; preds = %19
  store i32 1, i32* %2, align 4
  br label %27

22:                                               ; preds = %19
  store i32 1, i32* %2, align 4
  br label %27

23:                                               ; preds = %19
  store i32 1, i32* %2, align 4
  br label %27

24:                                               ; preds = %19
  br label %25

25:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %27

26:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %25, %23, %22, %21, %18, %7
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
